--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,13 +7,11 @@
     <application
         android:allowBackup="true"
         android:icon="@drawable/logo"
-        android:label="@string/app_name"
+        android:label="a"
         android:roundIcon="@drawable/logo"
         android:supportsRtl="true"
         android:usesCleartextTraffic="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".UbahPassword"></activity>
-        <activity android:name=".BiodataDosen"/>
         <activity android:name=".Login">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -22,6 +20,8 @@
             </intent-filter>
         </activity>
         <activity android:name=".Home" />
+        <activity android:name=".BiodataDosen"/>
+        <activity android:name=".UbahPassword"/>
     </application>
 
 </manifest>
